--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 blake3 = "1.5.0"
+clap = { version = "4.5.1", features = ["derive"] }
 rbxcloud = "0.6.1"
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["full"] }
