--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,10 @@ name = "asphault"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 blake3 = "1.5.0"
 clap = { version = "4.5.1", features = ["derive"] }
 rbxcloud = "0.6.1"
 serde = { version = "1.0.197", features = ["derive"] }
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = { version = "1.36.0" }
 toml = "0.8.10"
