--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 blake3 = "1.5.0"
 clap = { version = "4.5.1", features = ["derive"] }
+console = { version = "0.15.8", features = ["ansi-parsing"] }
+log = "0.4.21"
 rbxcloud = "0.6.1"
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0" }
