--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         name: Build (${{ matrix.target }})
         runs-on: ${{ matrix.os }}
         env:
-            BIN: rojo
+            BIN: asphalt
         steps:
             - uses: actions/checkout@v3
               with:
