--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ clap = { version = "4.5.1", features = ["derive"] }
 console = { version = "0.15.8", features = ["ansi-parsing"] }
 log = "0.4.21"
 rbxcloud = "0.6.1"
+reqwest = { version = "0.11.24", features = ["gzip"] }
 serde = { version = "1.0.197", features = ["derive"] }
+serde-xml-rs = "0.6.0"
 tokio = { version = "1.36.0" }
 toml = "0.8.10"
