--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 blake3 = "1.5.0"
 clap = { version = "4.5.1", features = ["derive"] }
 console = { version = "0.15.8", features = ["ansi-parsing"] }
+dotenv = "0.15.0"
 log = "0.4.21"
 rbxcloud = "0.6.1"
 reqwest = { version = "0.11.24", features = ["gzip"] }
