--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,79 +1,59 @@
-name: Deploy
+name: Release
 
 on:
     push:
-        tags:
-            - "[0-9]+.[0-9]+.[0-9]+"
-
-permissions:
-    contents: write
+        tags: ["*"]
+    workflow_dispatch:
 
 jobs:
-    build-and-upload:
-        name: Build and upload
-        runs-on: ${{ matrix.os }}
-
-        strategy:
-            matrix:
-                include:
-                    - build: linux
-                      os: ubuntu-latest
-                      target: x86_64-unknown-linux-musl
-
-                    - build: macos
-                      os: macos-latest
-                      target: x86_64-apple-darwin
-
-                    - build: windows
-                      os: windows-latest
-                      target: x86_64-pc-windows-msvc
+    windows:
+        runs-on: windows-latest
 
         steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
-            - name: Get the release version from the tag
-              shell: bash
-              run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+            - name: Build release binary
+              run: cargo build --verbose --locked --release
+
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                  name: asphalt-win64
+                  path: target/release/asphalt.exe
+
+    macos:
+        runs-on: macos-latest
+
+        steps:
+            - uses: actions/checkout@v4
 
             - name: Install Rust
+              run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
-              uses: dtolnay/rust-toolchain@stable
+            - name: Build release binary
+              run: |
+                  source $HOME/.cargo/env
+                  cargo build --verbose --locked --release
 
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v4
               with:
-                  targets: ${{ matrix.target }}
+                  name: asphalt-macos
+                  path: target/release/asphalt
+
+    linux:
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v4
 
             - name: Build
-              uses: actions-rs/cargo@v1
+              run: cargo build --locked --verbose --release
+              env:
+                  OPENSSL_STATIC: 1
+
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v4
               with:
-                  use-cross: true
-                  command: build
-                  args: --verbose --release --target ${{ matrix.target }}
-
-            - name: Build archive
-              shell: bash
-              run: |
-                  # Replace with the name of your binary
-                  binary_name="asphalt"
-
-                  dirname="$binary_name-${{ env.VERSION }}-${{ matrix.target }}"
-                  mkdir "$dirname"
-                  if [ "${{ matrix.os }}" = "windows-latest" ]; then
-                    mv "target/${{ matrix.target }}/release/$binary_name.exe" "$dirname"
-                  else
-                    mv "target/${{ matrix.target }}/release/$binary_name" "$dirname"
-                  fi
-
-                  if [ "${{ matrix.os }}" = "windows-latest" ]; then
-                    7z a "$dirname.zip" "$dirname"
-                    echo "ASSET=$dirname.zip" >> $GITHUB_ENV
-                  else
-                    tar -czf "$dirname.tar.gz" "$dirname"
-                    echo "ASSET=$dirname.tar.gz" >> $GITHUB_ENV
-                  fi
-
-            - name: Release
-              uses: softprops/action-gh-release@v1
-              with:
-                  files: |
-                      ${{ env.ASSET }}
+                  name: asphalt-linux
+                  path: target/release/asphalt
