--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,28 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 tokio = { version = "1.36.0" }
 toml = "0.8.11"
+
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.12.0"
+# CI backends to support
+ci = ["github"]
+# The installers to generate for each app
+installers = []
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = [
+	"aarch64-apple-darwin",
+	"x86_64-apple-darwin",
+	"x86_64-unknown-linux-gnu",
+	"x86_64-pc-windows-msvc",
+]
+# Publish jobs to run in CI
+pr-run-mode = "plan"
+windows-archive = ".zip"
+unix-archive = ".zip"
