--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ dotenv = "0.15.0"
 log = "0.4.21"
 rbxcloud = "0.10.0"
 reqwest = { version = "0.12.2", features = ["gzip"] }
+resvg = "0.40.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 tokio = { version = "1.37.0" }
