--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ blake3 = "1.5.0"
 clap = { version = "4.5.2", features = ["derive"] }
 console = { version = "0.15.8", features = ["ansi-parsing"] }
 dotenv = "0.15.0"
+image = "0.25.1"
 log = "0.4.21"
 rbxcloud = "0.10.0"
 reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "gzip"] }
@@ -23,6 +24,10 @@ serde = { version = "1.0.199", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 tokio = { version = "1.37.0" }
 toml = "0.8.11"
+
+[features]
+default = ["alpha_bleed"]
+alpha_bleed = []
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
