--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asphalt"
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
 license = "MIT"
 authors = ["Jack T <jack@jackt.space>"]
@@ -18,7 +18,10 @@ dotenv = "0.15.0"
 image = "0.25.1"
 log = "0.4.21"
 rbxcloud = "0.10.0"
-reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "gzip"] }
+reqwest = { version = "0.12.4", default-features = false, features = [
+    "rustls-tls",
+    "gzip",
+] }
 resvg = "0.41.0"
 serde = { version = "1.0.199", features = ["derive"] }
 serde-xml-rs = "0.6.0"
