Update crates.io description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.1"
 edition = "2021"
 license = "MIT"
 authors = ["Jack T <jack@jackt.space>"]
-description = "A super sloppy Roblox asset manager"
+description = "Upload and reference Roblox assets in code"
 repository = "https://github.com/jacktabscode/asphalt"
 homepage = "https://github.com/jacktabscode/asphalt"
 readme = "README.md"
