--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 
 [dependencies]
 anyhow = "1.0.86"
+bit-vec = "0.6.3"
 blake3 = "1.5.0"
 clap = { version = "4.5.2", features = ["derive"] }
 console = { version = "0.15.8", features = ["ansi-parsing"] }
