--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.5.2", features = ["derive"] }
 console = { version = "0.15.8", features = ["ansi-parsing"] }
 dotenv = "0.15.0"
 image = "0.25.1"
+inquire = "0.7.5"
 rbxcloud = "0.10.0"
 reqwest = { version = "0.12.4", default-features = false, features = [
     "rustls-tls",
