Convert prints to use log crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,13 @@ anyhow = "1.0.86"
 bit-vec = "0.6.3"
 blake3 = "1.5.0"
 clap = { version = "4.5.2", features = ["derive"] }
+clap-verbosity-flag = "2.2.0"
 console = { version = "0.15.8", features = ["ansi-parsing"] }
 dotenv = "0.15.0"
+env_logger = "0.11.3"
 image = "0.25.1"
 inquire = "0.7.5"
+log = "0.4.21"
 rbxcloud = "0.10.0"
 reqwest = { version = "0.12.4", default-features = false, features = [
     "rustls-tls",
