--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ env_logger = "0.11.3"
 image = "0.25.1"
 inquire = "0.7.5"
 log = "0.4.21"
+rbx_binary = { version = "0.7.4", features = ["serde"] }
+rbx_xml = "0.13.3"
 rbxcloud = "0.10.0"
 reqwest = { version = "0.12.4", default-features = false, features = [
     "rustls-tls",
@@ -31,10 +33,6 @@ serde = { version = "1.0.202", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 tokio = { version = "1.37.0" }
 toml = "0.8.13"
-
-[features]
-default = ["alpha_bleed"]
-alpha_bleed = []
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
