--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ blake3 = "1.5.0"
 clap = { version = "4.5.2", features = ["derive"] }
 clap-verbosity-flag = "2.2.0"
 console = { version = "0.15.8", features = ["ansi-parsing"] }
+cookie = "0.15.1"
 dotenv = "0.15.0"
 env_logger = "0.11.3"
 image = "0.25.1"
