Automatically detect cookie using rbx_cookie

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ image = "0.25.1"
 inquire = "0.7.5"
 log = "0.4.21"
 rbx_binary = { version = "0.7.4", features = ["serde"] }
+rbx_cookie = { version = "0.1.4", default-features = false}
 rbx_xml = "0.13.3"
 rbxcloud = "0.10.0"
 reqwest = { version = "0.12.4", default-features = false, features = [
