--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ console = { version = "0.15.8", features = ["ansi-parsing"] }
 cookie = "0.15.1"
 dotenv = "0.15.0"
 env_logger = "0.11.3"
+globset = "0.4.14"
 image = "0.25.1"
 inquire = "0.7.5"
 log = "0.4.21"
