--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ reqwest = { version = "0.12.5", default-features = false, features = [
     "gzip",
 ] }
 resvg = "0.41.0"
+roblox_install = "1.0.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 tokio = { version = "1.38.0" }
