build: ensure CI fails on lint/format warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
     lint:
         name: Rustfmt & Clippy
         runs-on: ubuntu-latest
+        env:
+          RUSTFLAGS: "-Dwarnings"
 
         steps:
             - uses: actions/checkout@v3
