Use WalkDir for brevity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 tokio = { version = "1.38.0" }
 toml = "0.8.14"
+walkdir = "2.5.0"
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
