--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,33 +10,37 @@ homepage = "https://github.com/jacktabscode/asphalt"
 readme = "README.md"
 
 [dependencies]
-anyhow = "1.0.91"
+anyhow = "1.0.97"
 bit-vec = "0.8"
-blake3 = "1.5.4"
-clap = { version = "4.5.20", features = ["derive"] }
-clap-verbosity-flag = "2.2.2"
-console = { version = "0.15.8", features = ["ansi-parsing"] }
-cookie = "0.15.2"
+blake3 = "1.7.0"
+clap = { version = "4.5.32", features = ["derive"] }
+clap-verbosity-flag = "3.0.2"
+console = { version = "0.15.11", features = ["ansi-parsing"] }
+cookie = "0.18.1"
 dotenv = "0.15.0"
-env_logger = "0.11.5"
-globset = "0.4.15"
-image = "0.25.4"
+env_logger = "0.11.7"
+globset = { version = "0.4.16", features = ["serde1"] }
+image = "0.25.5"
+indicatif = "0.17.11"
+indicatif-log-bridge = "0.2.3"
 inquire = "0.7.5"
-log = "0.4.22"
+log = "0.4.26"
+deranged = "=0.4.0" # https://github.com/ebarnard/rust-plist/issues/151
+plist = "=1.7.0" # https://github.com/ebarnard/rust-plist/issues/151
 rbx_binary = { version = "0.7.7", features = ["serde"] }
-rbx_cookie = { version = "0.1.4", default-features = false }
+rbx_cookie = { version = "0.1.5", default-features = false }
 rbx_xml = "0.13.5"
-rbxcloud = "0.15.1"
-reqwest = { version = "0.12.9", default-features = false, features = [
+rbxcloud = "0.17.0"
+reqwest = { version = "0.12.15", default-features = false, features = [
 	"rustls-tls",
 	"gzip",
 ] }
-resvg = "0.44.0"
+resvg = "0.45.0"
 roblox_install = "1.0.0"
-serde = { version = "1.0.214", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde-xml-rs = "0.6.0"
-tokio = { version = "1.41.0" }
-toml = "0.8.19"
+tokio = { version = "1.44.1", features = ["full"] }
+toml = "0.8.20"
 walkdir = "2.5.0"
 
 # The profile that 'cargo dist' will build with
