--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asphalt"
-version = "0.9.1"
+version = "1.0.0-pre.0"
 edition = "2021"
 license = "MIT"
 authors = ["Jack T <jack@jackt.space>"]
