--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.5.32", features = ["derive"] }
 clap-verbosity-flag = "3.0.2"
 dotenv = "0.15.0"
 env_logger = "0.11.7"
+fs-err = { version = "3.1.0", features = ["tokio"] }
 globset = { version = "0.4.16", features = ["serde1"] }
 image = "0.25.5"
 indicatif = "0.17.11"
