--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ resvg = "0.45.0"
 roblox_install = "1.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde-xml-rs = "0.6.0"
+serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["full"] }
 toml = "0.8.20"
 walkdir = "2.5.0"
