--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -14,7 +14,12 @@ tap = "jacktabscode/homebrew-tap"
 # Publish jobs to run in CI
 publish-jobs = ["homebrew"]
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+targets = [
+	"aarch64-apple-darwin",
+	"x86_64-apple-darwin",
+	"x86_64-unknown-linux-gnu",
+	"x86_64-pc-windows-msvc",
+]
 # Which actions to run on pull requests
 pr-run-mode = "skip"
 # The archive format to use for windows builds (defaults .zip)
@@ -23,3 +28,5 @@ windows-archive = ".zip"
 unix-archive = ".zip"
 # Checksums to generate for each App
 checksum = "false"
+
+allow-dirty = ["ci"]
