--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -29,4 +29,7 @@ unix-archive = ".zip"
 # Checksums to generate for each App
 checksum = "false"
 
+[dist.github_custom_runners]
+x86_64-unknown-linux-gnu = "ubuntu-latest"
+
 allow-dirty = ["ci"]
