--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -27,7 +27,7 @@ windows-archive = ".zip"
 # The archive format to use for non-windows builds (defaults .tar.xz)
 unix-archive = ".zip"
 # Checksums to generate for each App
-checksum = "false"
+checksum = false
 
 [dist.github-custom-runners]
 global = "ubuntu-22.04"
