--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -32,3 +32,6 @@ global = "ubuntu-22.04"
 
 [dist.github-custom-runners.x86_64-unknown-linux-gnu]
 runner = "ubuntu-22.04"
+
+[dist.github-custom-runners.x86_64-pc-windows-msvc]
+runner = "windows-2022"
