--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -1,33 +1,20 @@
 [workspace]
 members = ["cargo:."]
 
-# Config for 'dist'
 [dist]
-# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
-cargo-dist-version = "0.28.0"
-# CI backends to support
+cargo-dist-version = "0.28.2"
 ci = "github"
-# The installers to generate for each app
 installers = ["homebrew"]
-# A GitHub repo to push Homebrew formulas to
 tap = "jacktabscode/homebrew-tap"
-# Publish jobs to run in CI
 publish-jobs = ["homebrew"]
-# Target platforms to build apps for (Rust target-triple syntax)
 targets = [
 	"aarch64-apple-darwin",
 	"x86_64-apple-darwin",
 	"x86_64-unknown-linux-gnu",
 	"x86_64-pc-windows-msvc",
 ]
-# Which actions to run on pull requests
 pr-run-mode = "skip"
-# The archive format to use for windows builds (defaults .zip)
 windows-archive = ".zip"
-# The archive format to use for non-windows builds (defaults .tar.xz)
 unix-archive = ".zip"
-
-[dist.github-custom-runners]
-global = "ubuntu-22.04"
-x86_64-unknown-linux-gnu = "ubuntu-22.04"
-x86_64-pc-windows-msvc = "windows-2022"
+checksum = "false"
+source-tarball = false
