--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,10 @@ mock_cloud = []
 [profile.dist]
 inherits = "release"
 lto = "thin"
+
+[dev-dependencies]
+insta = { version = "1.43.1", features = ["yaml"] }
+
+[profile.dev.package]
+insta.opt-level = 3
+similar.opt-level = 3
