--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bytes = "1.10.1"
 clap = { version = "4.5.41", features = ["derive"] }
 clap-verbosity-flag = "3.0.3"
 dashmap = "6.1.0"
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 env_logger = "0.11.8"
 fs-err = { version = "3.1.1", features = ["tokio"] }
 futures = "0.3.31"
@@ -55,4 +55,3 @@ insta = { version = "1.43.1", features = ["yaml"] }
 
 [profile.dev.package]
 insta.opt-level = 3
-similar.opt-level = 3
