Update license and Cargo.toml to use my full name and new email

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "asphalt"
 version = "1.0.0"
 edition = "2024"
 license = "MIT"
-authors = ["Jack T <jack@jackt.space>"]
+authors = ["Jack Taylor <j@jackt.io>"]
 description = "Upload and reference Roblox assets in code"
 repository = "https://github.com/jacktabscode/asphalt"
 homepage = "https://github.com/jacktabscode/asphalt"
