--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,10 @@ globset = { version = "0.4.16", features = ["serde1"] }
 image = "0.25.6"
 indicatif = "=0.17.11"
 indicatif-log-bridge = "0.2.3"
+fjson = "0.3.1"
+json5 = "0.4.1"
 log = "0.4.27"
+schemars = { version = "1.0", features = ["derive"] }
 rbx_binary = { version = "1.0.0", features = ["serde"] }
 rbx_cookie = { version = "0.1.5", default-features = false }
 rbx_xml = "1.0.0"
