--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -3,17 +3,11 @@ members = ["cargo:."]
 
 [dist]
 cargo-dist-version = "0.29.0"
-ci = "github"
-installers = ["homebrew"]
-tap = "jacktabscode/homebrew-tap"
-publish-jobs = ["homebrew"]
-targets = [
-	"aarch64-apple-darwin",
-	"x86_64-apple-darwin",
-	"x86_64-unknown-linux-gnu",
-	"x86_64-pc-windows-msvc",
-]
-pr-run-mode = "skip"
 checksum = "false"
+ci = "github"
+installers = []
+pr-run-mode = "skip"
+publish-jobs = []
 source-tarball = false
+targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
 unix-archive = ".zip"
