Fix CI failures: rustfmt formatting and Windows cargo-machete

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
         run: cargo test --locked --verbose
 
       - name: Machete
+        if: matrix.os != 'windows-latest'
         uses: bnjbvr/cargo-machete@main
 
   lint:
