--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -1,13 +1,21 @@
 [workspace]
 members = ["cargo:."]
 
+# Config for 'dist'
 [dist]
+# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.29.0"
+# Checksums to generate for each App
 checksum = "false"
+# CI backends to support
 ci = "github"
+# The installers to generate for each app
 installers = []
+# Which actions to run on pull requests
 pr-run-mode = "skip"
-publish-jobs = []
+# Generate and dist a source tarball
 source-tarball = false
+# Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+# The archive format to use for non-windows builds (defaults .tar.xz)
 unix-archive = ".zip"
