--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,15 @@
 name = "asphalt"
 version = "1.1.0"
 edition = "2024"
-license = "MIT"
-authors = ["Jack Taylor <j@jackt.io>"]
 description = "Upload and reference Roblox assets in code"
-repository = "https://github.com/jacktabscode/asphalt"
-homepage = "https://github.com/jacktabscode/asphalt"
 readme = "README.md"
+homepage = "https://github.com/jacktabscode/asphalt"
+repository = "https://github.com/jacktabscode/asphalt"
+license = "MIT"
 
 [dependencies]
 anyhow = "1.0.98"
+assert_cmd = "2.0.17"
 bit-vec = "0.8"
 blake3 = "1.8.2"
 bytes = "1.10.1"
@@ -29,10 +29,11 @@ log = "0.4.27"
 rbx_binary = { version = "1.0.0", features = ["serde"] }
 rbx_cookie = { version = "0.1.5", default-features = false }
 rbx_xml = "1.0.0"
+relative-path = { version = "2.0.1", features = ["serde"] }
 reqwest = { version = "0.12.22", default-features = false, features = [
-	"rustls-tls",
-	"gzip",
-	"multipart",
+  "gzip",
+  "multipart",
+  "rustls-tls",
 ] }
 resvg = "0.45.1"
 roblox_install = "1.0.0"
@@ -42,16 +43,16 @@ tokio = { version = "1.46.1", features = ["full"] }
 toml = "0.9.2"
 walkdir = "2.5.0"
 
+[dev-dependencies]
+insta = { version = "1.43.1", features = ["yaml"] }
+
 [features]
 mock_cloud = []
+
+[profile.dev.package]
+insta.opt-level = 3
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
 inherits = "release"
 lto = "thin"
-
-[dev-dependencies]
-insta = { version = "1.43.1", features = ["yaml"] }
-
-[profile.dev.package]
-insta.opt-level = 3
