--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -11,6 +11,7 @@ targets = [
 	"aarch64-apple-darwin",
 	"x86_64-apple-darwin",
 	"x86_64-unknown-linux-gnu",
+	"aarch64-unknown-linux-gnu",
 	"x86_64-pc-windows-msvc",
 ]
 pr-run-mode = "skip"
