--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ reqwest = { version = "0.12.24", default-features = false, features = [
 ] }
 resvg = "0.45.1"
 roblox_install = "1.0.0"
+schemars = "1.0.4"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
